--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -289,6 +289,58 @@ a.button {
 }
 
 /*
+* Styles for the people cards
+*/
+.all_people {
+  margin: 0 auto;
+  max-width: 1000px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.person {
+  margin: 0 auto;
+  width: 300px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 2px 4px rgba(0, 0, 0, 0.5), 0px -2px 2px rgba(0, 0, 0, 0.15);
+  height: 100%;
+}
+
+.profile {
+  padding: 20px 15px;
+}
+
+.profile_picture {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  display: block;
+}
+
+.profile_name {
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.profile_position {
+  text-align: center;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.7);
+  margin-bottom: 18px;
+}
+
+.profile_description {
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+}
+
+
+
+/*
  * Overwrite the settings in each style for narrow screens
  */
 @media screen and (max-width: 1023px) {
